--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <meta name="author" content="Jean Carlo de Elias Moreira">
     <meta name="robots" content="index, follow">
     <meta name="keywords" content="game jogo memória opensource">
@@ -79,6 +79,22 @@
         opacity: 0 !important;
         filter: alpha(opacity=0) !important;
       }
+
+      body > div.loadbar{
+        position: fixed;
+        left: 0;
+        top: 0;
+        bottom: auto;
+        height: .5em;
+        width: 0;
+        background: #2b92db;
+
+        -webkit-transition:all .3s linear 0s;
+        -moz-transition:all .3s linear 0s;
+        -ms-transition:all .3s linear 0s;
+        -o-transition:all .3s linear 0s;
+        transition:all .3s linear 0s;
+      }
     </style>
 
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
@@ -89,58 +105,50 @@
   </head>
 
   <body>
+    <div class="ocultar preloads">
+      <audio class="music" loop><source src="assets/audio/CC0-aHR0cHM6Ly9mcmVlc291bmQub3JnL3Blb3BsZS9yYXAyaC9zb3VuZHMvMTUxNTM5Lw==.m4a" type="audio/mp4"></audio>
+      <audio class="ambient" autoplay loop><source src="assets/audio/CC0-aHR0cHM6Ly9mcmVlc291bmQub3JnL3Blb3BsZS9sb2xsb3NvdW5kL3NvdW5kcy8zODY5OTcv.m4a" type="audio/mp4"></audio>
+
+      <div class="fx">
+        <audio class="achado"><source src="assets/audio/fx/CCBY3-aHR0cHM6Ly9mcmVlc291bmQub3JnL3Blb3BsZS92aWt1c2Vycm8vc291bmRzLzI0NjMwNy8=.m4a" type="audio/mp4"></audio>
+        <audio class="error"><source src="assets/audio/fx/CC0-aHR0cHM6Ly9mcmVlc291bmQub3JnL3Blb3BsZS9sbHVpc2V0Ny9zb3VuZHMvMTQxMzM0.m4a" type="audio/mp4"></audio>
+        <audio class="gameover" loop><source src="assets/audio/fx/CC0-aHR0cHM6Ly9mcmVlc291bmQub3JnL3Blb3BsZS9zaXJwbHVzL3NvdW5kcy8yNTAzMQ==.m4a" type="audio/mp4"></audio>
+        <audio class="vitoria" loop><source src="assets/audio/fx/CCBY3-aHR0cHM6Ly9mcmVlc291bmQub3JnL3Blb3BsZS9sdWNreWxpdHRsZXJhdmVuL3NvdW5kcy8yMTgzNDg=.m4a" type="audio/mp4"></audio>
+
+        <div class="cell">
+          <audio class="over"><source src="assets/audio/fx/CCBY3-aHR0cHM6Ly9mcmVlc291bmQub3JnL3Blb3BsZS9icm91bWJyb3VtL3NvdW5kcy81MDU2MC8=.m4a" type="audio/mp4"></audio>
+          <audio class="click"><source src="assets/audio/fx/CC0-aHR0cHM6Ly9mcmVlc291bmQub3JnL3Blb3BsZS9CaWdfRDEyMy9zb3VuZHMvNzMyMTM=.m4a" type="audio/mp4"></audio>
+        </div>
+      </div>
+
+      <img src="assets/img/ui/sombra.png" alt="ui_sombra" />
+    </div>
+
     <div class="loading exibir">
       <div class="bola1"></div>
       <div class="bola2"></div>
     </div>
 
-    <section class="ocultar">
+    <header class="principal ocultar">
+      <div>
+        <a href="https://github.com/JeanCarloEM/GaMem" target="_blank"><img src="assets/img/ico/github.svg" alt="github" /></a>
+      </div>
+
+      <a class="logo" href="//www.jeancarloem.com" target="_blank"><img src="assets/img/jcem.svg" alt="JeanCarloEM.com" /></a>
+    </header>
+
+    <div class="loadbar"></div>
+
+    <div class="noratio ocultar">
+      <table><tr><td>
+            Resolução não suportada.<br />&lt; 360px
+          </td></tr></table>
+    </div>
+
+    <section class="game ocultar">
+      <div class="gameFundo"></div>
+
       <div class="quadro">
-        <div class='hud ocultar'>
-          <div class="bot">
-            <div class="margin">
-              <div class="ico menu"><img src="assets/img/ico/menu.svg" alt="menu"/></div>
-            </div>
-          </div>
-          <div class="top">
-            <div class="margin contador">
-              <div class="num d3"><img src="assets/img/nums/0.svg" alt="D" /></div>
-              <div class="num d2"><img src="assets/img/nums/0.svg" alt="D" /></div>
-              <div class="num d1"><img src="assets/img/nums/0.svg" alt="D" /></div>
-            </div>
-          </div>
-
-          <div class="topm">
-            <div class="margin">
-              <div class="p1 pontos">
-                <div class="contador">
-                  <div class="num d3"><img src="assets/img/nums/0.svg" alt="D" /></div>
-                  <div class="num d2"><img src="assets/img/nums/0.svg" alt="D" /></div>
-                  <div class="num d1"><img src="assets/img/nums/0.svg" alt="D" /></div>
-                </div>
-              </div>
-              <div class="p2 pontos">
-                <div class="contador">
-                  <div class="num d3"><img src="assets/img/nums/0.svg" alt="D" /></div>
-                  <div class="num d2"><img src="assets/img/nums/0.svg" alt="D" /></div>
-                  <div class="num d1"><img src="assets/img/nums/0.svg" alt="D" /></div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="botm">
-            <div class="margin">
-              <div class="p1">
-                <div><img src="assets/img/ico/p1.svg" alt="P1"/></div>
-              </div>
-              <div class="p2">
-                <div><img src="assets/img/ico/p2.svg" alt="P2" /></div>
-              </div>
-            </div>
-          </div>
-        </div>
-
         <div class='tabuleiro ocultar'></div>
 
         <div  class="gameover ocultar">
@@ -154,23 +162,22 @@
 
         <div  class="wins ocultar">
           <table><tr><td>
-                <div>
-                  <img class='p1' src="assets/img/ui/p1.svg" alt="P1" /><br />
-                  <img class='p2' src="assets/img/ui/p2.svg" alt="P2" /><br />
-                  <div class='btb gomenu'>Menu</div><br />
+                <div class="pontos">
+                  <img class='p1' src="assets/img/ui/p1.svg" alt="P1"/>
+                  <img class='p2' src="assets/img/ui/p2.svg" alt="P2" />
+
+                  <div class="margin contador">
+                    <div class="num d3"><img src="assets/img/nums/0.svg" alt="D" /></div>
+                    <div class="num d2"><img src="assets/img/nums/0.svg" alt="D" /></div>
+                    <div class="num d1"><img src="assets/img/nums/0.svg" alt="D" /></div>
+                  </div>
+
+                  <div class='btb gomenu'>Menu</div>
                 </div>
               </td></tr></table>
         </div>
 
         <div  class="splash exibir">
-          <div class="top">
-            <div class="margin">
-              <a class="jcem" href="https://github.com/JeanCarloEM/GaMem" target="_blank">
-                <img src="assets/img/jcem.svg" alt="Github//JeanCarloEM" />
-              </a>
-            </div>
-          </div>          
-          
           <table><tr><td>
                 <img class='logo' src="assets/img/ui/logo.png" alt="GaMem" />
                 <div class='menu'>
@@ -184,6 +191,81 @@
               </td></tr></table>
         </div>
       </div>
+
+      <div class='hud ocultar'>
+        <div class="bot">
+          <div class="margin">
+            <div class="ico menu"><img src="assets/img/ico/menu.svg" alt="menu" /></div>
+          </div>
+        </div>
+        <div class="top">
+          <div class="margin contador">
+            <div class="num d3"><img src="assets/img/nums/0.svg" alt="D" /></div>
+            <div class="num d2"><img src="assets/img/nums/0.svg" alt="D" /></div>
+            <div class="num d1"><img src="assets/img/nums/0.svg" alt="D" /></div>
+          </div>
+        </div>
+
+        <div class="topm">
+          <div class="margin">
+            <div class="p1 pontos">
+              <div class="contador">
+                <div class="num d3"><img src="assets/img/nums/0.svg" alt="D" /></div>
+                <div class="num d2"><img src="assets/img/nums/0.svg" alt="D" /></div>
+                <div class="num d1"><img src="assets/img/nums/0.svg" alt="D" /></div>
+              </div>
+            </div>
+            <div class="p2 pontos">
+              <div class="contador">
+                <div class="num d3"><img src="assets/img/nums/0.svg" alt="D" /></div>
+                <div class="num d2"><img src="assets/img/nums/0.svg" alt="D" /></div>
+                <div class="num d1"><img src="assets/img/nums/0.svg" alt="D" /></div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="botm">
+          <div class="margin">
+            <div class="p1">
+              <div><img src="assets/img/ico/p1.svg" alt="P1"/></div>
+            </div>
+            <div class="p2">
+              <div><img src="assets/img/ico/p2.svg" alt="P2" /></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <aside class="right volume music">
+        <table><tr><td>
+              <div data-vol="9"></div>
+              <div data-vol="8"></div>
+              <div data-vol="7"></div>
+              <div data-vol="6"></div>
+              <div data-vol="5"></div>
+              <div data-vol="4"></div>
+              <div data-vol="3"></div>
+              <div data-vol="2"></div>
+              <div data-vol="1"></div>
+              <div data-vol="0"></div>
+            </td></tr></table>
+      </aside>
+
+      <aside class="left volume fx">
+        <table><tr><td>
+              <div data-vol="9"></div>
+              <div data-vol="8"></div>
+              <div data-vol="7"></div>
+              <div data-vol="6"></div>
+              <div data-vol="5"></div>
+              <div data-vol="4"></div>
+              <div data-vol="3"></div>
+              <div data-vol="2"></div>
+              <div data-vol="1"></div>
+              <div data-vol="0"></div>
+            </td></tr></table>
+      </aside>
     </section>
   </body>
 </html>
